# waypoint_follower

./: CMakeLists.txt  package.xml  test.bag  test.csv
scripts/: waypoint_follower.py
